CHANGES IN VERSION 1.27.0
-------------------------

NEW FEATURES

    o new function `seqUnitSlidingWindows()`

    o new function `seqUnitApply()`

    o new variable "$variant_index", "$sample_index" in `SeqGetData()`, `seqBlockApply()`
      and `seqUnitApply()` to get the indices of selected variants


CHANGES IN VERSION 1.26.1
-------------------------

BUG FIXES

    o Fails to correctly select duplicate indices in `seqSetFilter(f, variant.sel=)`


CHANGES IN VERSION 1.26.0
-------------------------

NEW FEATURES

    o new function `seqAddValue()`

UTILITIES

    o RLE chromosome coding in `seqBED2GDS()`

    o change the file name "vignettes/R_Integration.Rmd" to "vignettes/SeqArray.Rmd",
      so `vignette("SeqArray")` can work directly

    o correct Estimated remaining Time to Complete (ETC) for load balancing in
      `seqParallel()`

BUG FIXES

    o `seqBED2GDS(, verbose=FALSE)` should have no display

CHANGES

    o use a svg file instead of png in vignettes


CHANGES IN VERSION 1.24.2
-------------------------

NEW FEATURES

    o add the compiler information in `seqSystem()`

    o new arguments '.balancing', '.bl_size' and '.bl_progress' in `seqParallel()`
      for load balancing

UTILITIES

    o improve unix forking processes for load balancing in `seqParallel()`

BUG FIXES

    o fix `seqSummary()` when no phase data


CHANGES IN VERSION 1.24.0
-------------------------

NEW FEATURES

    o a new function `seqResetVariantID()`

    o a new option in `seqRecompress(, compress="none")` to uncompress all data

    o `seqGetData()` allows a GDS file name in the first argument


CHANGES IN VERSION 1.22.6
-------------------------

BUG FIXES

    o `seqSetFilter(, sample.id=)` fails to correctly select samples in rare cases
      (since SeqArray>=v1.22.0 uses the distribution of selected samples to optimize
      the data access of genotypes, see https://github.com/zhengxwen/SeqArray/issues/48)
